<resources>

    <string name="app_name">Time Manager +</string>
    <string name="title_activity_calendar" translatable="false">CalendarActivity</string>

    <!-- Main -->
    <string name="start_button">START</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_email">Enter email</string>
    <string name="register_password">Enter password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_name">Enter name</string>
    <string name="register_nickname">Enter nickname</string>
    <string name="register_age">Enter age</string>
    <string name="register_gender">Select gender</string>

    <!-- Errors -->
    <string name="error_login">Email or password incorrect</string>
    <string name="error_password">Review the password please</string>
    <string name="error_email">Enter a valid email</string>
    <string name="error_fields">Please enter all fields</string>

    <string name="button_create">Create account</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_password">Password</string>
    <string name="profile_name">Name</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_takephoto">Take Photo</string>
    <string name="profile_select">Select Profile</string>
    <string name="share">share</string>
    <string name="achievement_unlocked">Achievement Unlocked</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <!--Things to do-->
    <string name="time">Time</string>


    <!--Configuration-->
    <string name="config_gral">General</string>
    <string name="config_newuser">New User</string>
    <string name="config_information">Information</string>
    <string name="config_profile">Profile</string>


    <!-- Notification -->
    <string name="notifications_receive">Get Notifications</string>
    <string name="notifications_prove">Notifications</string>

    <!-- Edit Information -->
    <string name="save">Save</string>
    <string name="editinfo_actualpass">Actual Password</string>
    <string name="editinfo_newpass">New Password</string>
    <string name="editinfo_guardar">Save</string>


    <!-- General -->
    <string name="edit_information">Edit Information</string>
    <string name="notifications">Notifications</string>

    <!-- Information Us -->
    <string name="svartalla_soft" translatable="false">Svartalla Soft</string>
    <string name="svartalla_inf">"Svartalla Soft is a software developer company created in 2020 "</string>
    <string name="founders">Founders</string>
    <string name="contact_us">Contact Us</string>
    <string name="support">For a technical support and service contact</string>
    <string name="founder" translatable="false">Llubitza Linares</string>
    <string name="founder2" translatable="false">Manuela Flores</string>
    <string name="founder3" translatable="false">Jaime Cortez</string>
    <string name="founder4" translatable="false">Ignacio Valencia</string>

    <!-- Add Task -->
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="date">Date</string>
    <string name="contact">Contact</string>

    <!-- Array -->
    <string name="register_gender_female">Gender Female</string>
    <string name="register_gender_male">Gender Male</string>
    <string name="register_gender_nonbinary">Gender Nonbinary</string>
    <string name="action_settings" translatable="false">action settings</string>
    <string name="general">General</string>
    <string name="information">Information</string>
    <string name="new_user">New User</string>
    <string name="perfil">Profile</string>
    <string name="get_notifications">Get Notifications</string>
    <string name="notifications_prueba">Prove Notifications</string>


</resources>