<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationUs"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="382dp"
        android:layout_height="35dp"
        android:text="@string/svartalla_soft"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="66dp"
        android:text="@string/svartalla_inf"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="382dp"
        android:layout_height="29dp"
        android:text="@string/founders"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/founder"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/founder2"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/founder3"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/founder4"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="382dp"
        android:layout_height="30dp"
        android:text="@string/contact_us"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/support"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="+591 602543211"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="16dp" />

</LinearLayout>