<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarInformacion"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewnickname"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/profile_nickname"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextTextnickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/profile_email"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/editinfo_newpass"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/editinfo_actualpass"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextTextPasswordActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/button5"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/editinfo_guardar"
        android:textColor="#FFFFFF" />


</LinearLayout>