<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_configuration"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="160dp"
        android:id="@+id/general"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elegantTextHeight="true"
        android:text="@string/config_gral"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_ajustes"
        tools:ignore="MissingPrefix"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bti"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elegantTextHeight="true"
        android:text="@string/config_information"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_informacion"
        tools:ignore="MissingPrefix"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btc"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elegantTextHeight="true"
        android:text="@string/config_profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_usuario"
        tools:ignore="MissingPrefix" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnew"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elegantTextHeight="true"
        android:text="@string/config_newuser"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_mas"
        tools:ignore="MissingPrefix"  />

</LinearLayout>